# hm_ambulance

./: .gitignore  README.md  pyproject.toml
notebook/: Untitled-1.ipynb  category_editor.ipynb  category_editor_notebook.ipynb  combine_clean_xslx.ipynb  disease_classify.ipynb  eda.ipynb  eda_watanabe.ipynb  tenki_merge.ipynb
src/: check_api.py  claudereq.py  config.py  disease_classifier.py  jp_datetime.py  prompt_template.txt  tenki_mapping.csv
