[project]
name = "hm-ambulance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "jupyterlab>=4.3.4",
    "jupytext>=1.16.6",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pynvim>=0.5.2",
]
