[project]
name = "hm-ambulance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "ipykernel>=6.29.5",
    "japanize-matplotlib>=1.1.3",
    "jupyter-client>=8.6.3",
    "jupyterlab>=4.3.4",
    "jupytext>=1.16.6",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pynvim>=0.5.2",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]
